--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name"         : "RealLifeAvatar",
-  "version"      : "0.0.0",
+  "version"      : "0.0.1",
   "description"  : "Managing your purpose",
   "main"         : "server.js",
   "author"       : "DeanHinCo",
+  "scripts"      : {
+    "start": "node server.js"
+    },
   "dependencies" : {
     "express"         : "~4.6.1",
     "mongoose"        : "~3.8.13",
     "morgan"          : "~1.1.1",
     "body-parser"     : "~1.4.3",
     "method-override" : "~2.1.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/heroku/node-js-getting-started"
+  },
 }
