--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "body-parser"     : "~1.4.3",
     "method-override" : "~2.1.1"
   },
+  "engines": {
+    "node": "0.10.x"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "git@heroku.com:mean-123.git"
   },
 }
