--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@heroku.com:mean-123.git"
-  },
+    "url": "git@heroku.com:mean-test23.git"
+  }
 }
